[package]
name = "simtx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4", default-features = false }
hex = "0.4"
anyhow = "1.0.69"
tokio = "1.26"
revm = {path = "../crates/revm", features = ["ethersdb"]}
ethers = "2.0.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }

